--- a/fabric-and-printing.html
+++ b/fabric-and-printing.html
@@ -47,7 +47,7 @@
             <div id="navbarTogglerDemo" class="collapse navbar-collapse" data-aos="fade-left">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link underline-from-center">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
