--- a/suits.html
+++ b/suits.html
@@ -31,72 +31,75 @@
     <header id="home">
 
         <!-- Navbar Menu -->
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark" data-aos="fade-down">
+        
+        <nav class="navbar navbar-expand-lg navbar-dark fix" data-aos="fade-down">
 
-                <!-- Logo -->
-                <a href="#" class="navbar-brand" data-aos="fade-right">
-                    <h2>Sajh Dhaj</h2>
-                </a>
+            <!-- Logo -->
+            <a href="#" class="navbar-brand" data-aos="fade-right">
+                <h2>Sajh Dhaj</h2>
+            </a>
 
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo" aria-controls="navbarTogglerDemo" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo" aria-controls="navbarTogglerDemo" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <div id="navbarTogglerDemo" class="collapse navbar-collapse" data-aos="fade-left">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a href="#" class="nav-link">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Wedding Wear
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <a class="dropdown-item" href="#">Lehangas</a>
-                              <a class="dropdown-item" href="#">Gowns</a>
-                              <a class="dropdown-item" href="#">Sarees</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Suits
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <a class="dropdown-item" href="#">Wedding Wear</a>
-                              <a class="dropdown-item" href="#">Party Wear</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Ready to Wear
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <a class="dropdown-item" href="#">Kurtis</a>
-                              <a class="dropdown-item" href="#">Stitched Suits</a>
-                            </div>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link">Towels</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link">Pakistani Suits</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-    </div>
-    <br><br>
+            <div id="navbarTogglerDemo" class="collapse navbar-collapse"  data-aos="fade-left">
+                <ul class="navbar-nav ml-auto" data-hover="dropdown" data-animations="fadeInDown fadeInRight fadeInUp fadeInLeft" >
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link underline-from-center">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle underline-from-center" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Wedding Wear
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item" href="#">Lehangas</a>
+                          <a class="dropdown-item" href="#">Gowns</a>
+                          <a class="dropdown-item" href="#">Sarees</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle underline-from-center" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Suits
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item" href="#">Wedding Wear</a>
+                          <a class="dropdown-item" href="#">Party Wear</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle underline-from-center" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Ready to Wear
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item" href="#">Kurtis</a>
+                          <a class="dropdown-item" href="#">Stitched Suits</a>
+                        </div>
+                    </li>
+                    <li class="nav-item active underline-from-center">
+                        <a class="nav-link">Towels</a>
+                    </li>
+                    <li class="nav-item active underline-from-center">
+                        <a class="nav-link">Pakistani Suits</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <br><br><br><br><br><br><br>
     
+    </div>
+
+
+    <div class="container">
         <div class="text-center">
             <h2 style="color:white" >Suits</h2>
         </div>
-    </div>
-    <br><br><br>
+        <br><br><br>
 
-    <div class="text-center">
-        <img src="./images/suits.jpg" >
+        <div class="text-center">
+            <img src="./images/readytowear.jpeg" >
+        </div>
     </div>
 
     <br><br><br><br><br><br>
@@ -142,16 +145,16 @@
     </div>
 
     <!-- Contact Me -->
-    <div id="contact" class="contact segments">
-        <div class="container">
-            <div class="box-content" data-aos="fade-up">
+    <div id="contact" class="contact">
+        <!-- <div class="container"> -->
+            <div class="box-content-contact" data-aos="fade-up">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 col-xs-12" data-aos="fade-right">
                         <div class="content-left" >
                             <div class="section-title section-title-left">
                                 <h3>Contact Us</h3>
                             </div>
-                            <h2>Realize your dream with us</h2>
+                            <h2 class="a">Realize  <span class="b">your dream</span> with us</h2>
                             <ul>
                                 <li>
                                     <a href="https://www.facebook.com/gaurav.bhatia.792/" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -204,17 +207,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-
-    <!-- Footer for Thanks -->
-    <div class="footer segments" data-aos="flip-up">
-        <div class="container">
-            <div class="box-content">
-                <p>Thank You for Visiting!!</p>
-            </div>
-        </div>
+        <!-- </div> -->
     </div>
 
         <!-- Added Scripts -->
