--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         <!-- <div class="container"> -->
             <div class="box-content-contact" data-aos="fade-up">
                 <div class="row">
-                    <div class="col-md-6 col-sm-12 col-xs-12" data-aos="fade-right">
+                    <div class="col-md-4 col-sm-12 col-xs-12" data-aos="fade-right">
                         <div class="content-left" >
                             <div class="section-title section-title-left">
                                 <h3>Contact Us</h3>
@@ -408,7 +408,33 @@
                             <h6 class="marg-top hover-eff" >Contact Number: +91 9991816111</h6>
                         </div>
                     </div>
-                    <div class="col-md-6 col-sm-12 col-xs-12" data-aos="fade-left">
+                    <div class="col-md-3 col-sm-12 col-xs-12" data-aos="fade-right">
+                        <h3 class="underline-from-center">Information</h3>
+                        <br>
+                        <ul>
+                            <li>
+                                <a href="../SajhDhaj/aboutus.html">
+                                    <span>About us</span>
+                                </a>
+                            </li>
+                            <br>
+                            <li>
+                                <a href="../SajhDhaj/fabric-and-printing.html">
+                                    <span>Fabric and Printing Desciption</span>
+                                </a>
+                                
+                            </li>
+                            <br>
+                            <li>
+                                <a href="../SajhDhaj/deliveryinfo.html">
+                                    <span>Delivery and Return Information</span>
+                                </a>
+                            </li>
+
+                        </ul>
+
+                    </div>
+                    <div class="col-md-5 col-sm-12 col-xs-12" data-aos="fade-left">
                         <div class="content-right">
                             <form action="contact-form.php" class="contact-form" id="contact-form" method="post">
                                 <div class="row">
