--- a/readytowear.html
+++ b/readytowear.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/aos.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
+    <link rel="stylesheet" type="text/css" href="css/floating-wpp.min.css">
     <link rel="stylesheet" href="css/category_style.css">
     
 </head>
@@ -163,7 +164,7 @@
                                 </li>
                         
                             </ul>
-                            <h6 class="marg-top hover-eff" >Contact Number: +91 9991816111</h6>
+                            <h6 class="marg-top hover-eff" >Contact Number: +91 9306572699</h6>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12 col-xs-12" data-aos="fade-left">
@@ -209,6 +210,9 @@
         <!-- </div> -->
     </div>
 
+    <!-- WhatsApp Chat -->
+    <div id="WAButton-Dark"></div>
+
         <!-- Added Scripts -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -222,6 +226,7 @@
     <script src="js/contact-form.js"></script>
     <script src="js/counter.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/floating-wpp.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/main2.js"></script>
 
