--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/aos.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
+    <link rel="stylesheet" type="text/css" href="css/floating-wpp.min.css">
     <link rel="stylesheet" href="css/style.css">
     
 </head>
@@ -405,7 +406,7 @@
                                 </li>
                         
                             </ul>
-                            <h6 class="marg-top hover-eff" >Contact Number: +91 9991816111</h6>
+                            <h6 class="marg-top hover-eff" >Contact Number: +91 9306572699</h6>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-12 col-xs-12" data-aos="fade-right">
@@ -477,6 +478,9 @@
         <!-- </div> -->
     </div>
 
+    <!-- WhatsApp Chat -->
+    <div id="WAButton"></div>
+
 
     <!-- Footer for Thanks -->
 <!--     <div class="footer segments" data-aos="flip-up">
@@ -501,18 +505,9 @@
     <script src="js/contact-form.js"></script>
     <script src="js/counter.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/floating-wpp.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/main2.js"></script>
-    <script>
-        $(document).ready(function(){
-            $(".dropdown, .btn-group").hover(function(){
-                var dropdownMenu = $(this).children(".dropdown-menu");                
-                if(dropdownMenu.is(":visible")){
-                    dropdownMenu.parent().toggleClass("open");
-                }
-            });
-        });		
-    </script>
 
 </body>
 
