--- a/aboutus.html
+++ b/aboutus.html
@@ -96,13 +96,12 @@
         <h3 style="color:palevioletred">You are already beautiful."Our mission is to make you feel that way."</h3>
     </div>
 
-     <!-- Contact Me -->
-     <!-- Contact Me -->
+    <!-- Contact Me -->
     <div id="contact" class="contact">
         <!-- <div class="container"> -->
             <div class="box-content-contact" data-aos="fade-up">
                 <div class="row">
-                    <div class="col-md-4 col-sm-12 col-xs-12" data-aos="fade-right">
+                    <div class="col-md-4 col-sm-12 col-xs-12" >
                         <div class="content-left" >
                             <div class="section-title section-title-left">
                                 <h3>Contact Us</h3>
@@ -120,7 +119,7 @@
                             <h6 class="marg-top hover-eff" >Contact Number: +91 9306572699</h6>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-12 col-xs-12" data-aos="fade-right">
+                    <div class="col-md-3 col-sm-12 col-xs-12" >
                         <h3 class="underline-from-center">Information</h3>
                         <br>
                         <ul>
@@ -144,9 +143,9 @@
                             </li>
 
                         </ul>
-
+                        <br><br>
                     </div>
-                    <div class="col-md-5 col-sm-12 col-xs-12" data-aos="fade-left">
+                    <div class="col-md-5 col-sm-12 col-xs-12" >
                         <div class="content-right">
                             <form action="contact-form.php" class="contact-form" id="contact-form" method="post">
                                 <div class="row">
@@ -188,6 +187,7 @@
             </div>
         <!-- </div> -->
     </div>
+
     
     <!-- WhatsApp Chat -->
     <div id="WAButton"></div>
