--- a/products/sd301.html
+++ b/products/sd301.html
@@ -143,16 +143,12 @@
 
 
 
-
-
-
-
     <!-- Contact Me -->
     <div id="contact" class="contact">
         <!-- <div class="container"> -->
             <div class="box-content-contact" data-aos="fade-up">
                 <div class="row">
-                    <div class="col-md-4 col-sm-12 col-xs-12" data-aos="fade-right">
+                    <div class="col-md-4 col-sm-12 col-xs-12" >
                         <div class="content-left" >
                             <div class="section-title section-title-left">
                                 <h3>Contact Us</h3>
@@ -170,7 +166,7 @@
                             <h6 class="marg-top hover-eff" >Contact Number: +91 9306572699</h6>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-12 col-xs-12" data-aos="fade-right">
+                    <div class="col-md-3 col-sm-12 col-xs-12" >
                         <h3 class="underline-from-center">Information</h3>
                         <br>
                         <ul>
@@ -194,9 +190,9 @@
                             </li>
 
                         </ul>
-
+                        <br><br>
                     </div>
-                    <div class="col-md-5 col-sm-12 col-xs-12" data-aos="fade-left">
+                    <div class="col-md-5 col-sm-12 col-xs-12" >
                         <div class="content-right">
                             <form action="contact-form.php" class="contact-form" id="contact-form" method="post">
                                 <div class="row">
