--- a/readytowear.html
+++ b/readytowear.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="css/floating-wpp.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/category_style.css">
     
 </head>
@@ -150,7 +151,7 @@
         <!-- <div class="container"> -->
             <div class="box-content-contact" data-aos="fade-up">
                 <div class="row">
-                    <div class="col-md-6 col-sm-12 col-xs-12" data-aos="fade-right">
+                    <div class="col-md-4 col-sm-12 col-xs-12" >
                         <div class="content-left" >
                             <div class="section-title section-title-left">
                                 <h3>Contact Us</h3>
@@ -168,7 +169,33 @@
                             <h6 class="marg-top hover-eff" >Contact Number: +91 9306572699</h6>
                         </div>
                     </div>
-                    <div class="col-md-6 col-sm-12 col-xs-12" data-aos="fade-left">
+                    <div class="col-md-3 col-sm-12 col-xs-12" >
+                        <h3 class="underline-from-center">Information</h3>
+                        <br>
+                        <ul>
+                            <li>
+                                <a href="../SajhDhaj/aboutus.html">
+                                    <span>About us</span>
+                                </a>
+                            </li>
+                            <br>
+                            <li>
+                                <a href="../SajhDhaj/fabric-and-printing.html">
+                                    <span>Fabric and Printing Desciption</span>
+                                </a>
+                                
+                            </li>
+                            <br>
+                            <li>
+                                <a href="../SajhDhaj/deliveryinfo.html">
+                                    <span>Delivery and Return Information</span>
+                                </a>
+                            </li>
+
+                        </ul>
+                        <br><br>
+                    </div>
+                    <div class="col-md-5 col-sm-12 col-xs-12" >
                         <div class="content-right">
                             <form action="contact-form.php" class="contact-form" id="contact-form" method="post">
                                 <div class="row">
